<resources>
    <string name="incorrect_user_data">Failed to get user data, try to sign in again</string>
    <string name="user_data_fail_title">Failed to get data</string>
    <string name="incorrect_other_user_data">Failed to get user data</string>
    <string name="get_req_fail">Failed to get friend requests</string>
    <string name="password_confirm_password_not_match">Password and confirm password fields are not the same</string>
    <string name="dialog_incorrect_user_data">Incorrect user data changes</string>
    <string name="dialog_incorrect_credentials">Incorrect credentials</string>
    <string name="dialog_incorrect_credentials_expanded">Incorrect credentials, please provide correct ones to change</string>
    
    <string name="registration_date">Since %s</string>
    <string name="submit_photo">Submit photo</string>
    <string name="preview">Preview</string>
    <string name="dialog_pos">Save</string>
    <string name="dialog_neg">Do not save</string>
    <string name="settings">User settings</string>
    <string name="logout">Logout</string>
    
    <string name="settings_dialog_warning">Warning! After changing following parameters you will have to sign in again</string>
    <string name="username">Username</string>
    <string name="info">Info</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_credentials">Change credentials</string>
    <string name="confirm_credentials">Confirm credentials to proceed</string>
    <string name="confirm_dialog_pos">Confirm</string>
    <string name="confirm_dialog_neg">Do not confirm</string>
    <string name="credentials_change_failed">Set correct credentials to change them successfully</string>
    <string name="add_friend">Add friend</string>
    <string name="is_friend">This user is already your friend</string>
    <string name="request_sent">You already sent request</string>
    <string name="check_requests">Check requests</string>
    <string name="requests">Requests</string>
    
    <string name="profile_picture_transition_name">profile_picture</string>
    <string name="stats">Last results statistics</string>
    <string name="check_stats">Check last results</string>
    <string name="get_results_fail">Failed to get last results</string>
    <string name="get_requests_fail">Failed to get friend requests</string>
    <string name="friend_request_error">Error trying sending request, try again later</string>
</resources>