<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_settings"
        android:layout_width="@dimen/profile_settings_size"
        android:layout_height="@dimen/profile_settings_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/settings_anim"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:layout_marginHorizontal="@dimen/small_margin"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile_picture"
        android:layout_width="@dimen/profile_picture_size"
        android:layout_height="@dimen/profile_picture_size"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/small_margin"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="@dimen/zero_size"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_change_pfp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile_picture"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile_picture"
        android:backgroundTint="@color/fab_change_photo_color"
        android:src="@drawable/photo"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:layout_marginStart="@dimen/extra_small_margin"
        android:contentDescription="@string/submit_photo"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_picture"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:layout_marginHorizontal="@dimen/profile_default_margin_horizontal">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:textColor="@color/black"
            android:textAlignment="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_registration_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="@dimen/profile_default_margin_horizontal">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_registration_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:textColor="@color/black"
            android:textAlignment="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_registration_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="@dimen/profile_info_margin_horizontal">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:textColor="@color/black"
            android:textAlignment="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/profile_default_margin_horizontal"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintBottom_toTopOf="@id/btn_requests"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/check_stats"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/extra_small_margin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_requests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/profile_default_margin_horizontal"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/check_requests"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/profile_requests_margin_bottom"/>

    <ru.kpfu.itis.paramonov.common_android.ui.views.CircleTextView
        android:id="@+id/ctv_requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:color="@color/red"
        app:layout_constraintTop_toTopOf="@id/btn_requests"
        app:layout_constraintEnd_toEndOf="@id/btn_requests"
        android:layout_marginBottom="@dimen/extra_small_margin"
        android:textColor="@color/white"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>